[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Art/small_knight.png" type="Texture" id=1]
[ext_resource path="res://Scenes/debugtilemap.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Fonts/untitled_roguelike_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/CanvasLayer.gd" type="Script" id=6]
[ext_resource path="res://Scripts/TileMap.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Lerp.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Debug.gd" type="Script" id=9]
[ext_resource path="res://Scenes/DebugOut.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Health.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Name.gd" type="Script" id=12]
[ext_resource path="res://Fonts/Untitled Roguelike.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Fonts/untitled_roguelike_mid_space.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scenes/CombatLog.gd" type="Script" id=15]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_color = Color( 0.0117647, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.129412, 0.129412, 0.129412, 0.831373 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_top = 2

[sub_resource type="DynamicFont" id=6]
size = 22
outline_color = Color( 0.0117647, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Debug" type="Node" parent="."]
script = ExtResource( 9 )

[node name="debugCam" type="Camera2D" parent="."]
zoom = Vector2( 15, 15 )

[node name="Lerp" type="Node" parent="."]
script = ExtResource( 8 )
lerpDelay = 400
lerpStep = 0.125

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubHUD" type="ColorRect" parent="UI/HUD"]
anchor_top = 15.385
anchor_right = 1.0
anchor_bottom = 15.385
margin_top = -34.0
margin_bottom = -0.0150757
size_flags_horizontal = 7
size_flags_vertical = 7
color = Color( 0.172549, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/HUD/SubHUD"]
margin_left = 871.455
margin_top = 6.92297
margin_right = 1011.46
margin_bottom = 26.923
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ColorRect" parent="UI/HUD/SubHUD"]
margin_left = 864.0
margin_top = -558.0
margin_right = 1016.0
margin_bottom = -534.0
color = Color( 0.803922, 0.027451, 0.027451, 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthAmt" type="Label" parent="UI/HUD/SubHUD/Health"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UI/HUD/SubHUD/Health"]
margin_left = -40.0
margin_top = 8.0
margin_right = -6.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "HP"
uppercase = true

[node name="Name" type="Label" parent="UI/HUD/SubHUD"]
margin_left = 8.0
margin_top = -558.0
margin_right = 48.0
margin_bottom = -535.0
custom_fonts/font = SubResource( 1 )
text = "Name: "
uppercase = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatLog" type="Label" parent="UI/HUD/SubHUD"]
margin_top = -19.0
margin_right = 320.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 14 )
text = "combat log:"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatLogInterior" type="RichTextLabel" parent="UI/HUD/SubHUD/CombatLog"]
visible = false
margin_top = 19.0
margin_right = 320.0
margin_bottom = 119.0
custom_styles/normal = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 14 )
scroll_following = true

[node name="LogButton" type="Button" parent="UI/HUD/SubHUD/CombatLog"]
margin_left = 296.0
margin_top = -5.01508
margin_right = 325.0
margin_bottom = 23.9849
focus_mode = 0
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugOut" type="Label" parent="UI/HUD"]
visible = false
margin_left = 4.03595
margin_top = 3.67865
margin_right = 34.0359
margin_bottom = 39.6786
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 5 )
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dungeon" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 7 )

[node name="Player" type="Area2D" parent="."]
visible = false
position = Vector2( 192, 128 )
script = ExtResource( 3 )

[node name="PlayerSprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 5 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
[connection signal="takeDamage" from="." to="UI/HUD/SubHUD/Health" method="_on_Game_takeDamage"]
[connection signal="debugOut" from="Debug" to="UI/HUD/DebugOut" method="_on_Debug_debugOut"]
[connection signal="getID" from="Debug" to="Dungeon" method="_on_Debug_getID"]
[connection signal="lerpFinished" from="Lerp" to="." method="_on_Lerp_lerpFinished"]
[connection signal="hudUpdate" from="UI" to="UI/HUD/SubHUD/Name" method="_on_UI_hudUpdate"]
[connection signal="hudUpdate" from="UI" to="UI/HUD/SubHUD/Health" method="_on_UI_hudUpdate"]
[connection signal="pressed" from="UI/HUD/SubHUD/Button" to="UI" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="UI/HUD/SubHUD/CombatLog" to="UI/HUD/SubHUD/CombatLog" method="_on_CombatLog_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/SubHUD/CombatLog" to="UI/HUD/SubHUD/CombatLog" method="_on_CombatLog_mouse_exited"]
[connection signal="pressed" from="UI/HUD/SubHUD/CombatLog/LogButton" to="UI/HUD/SubHUD/CombatLog" method="_on_Button_pressed"]
[connection signal="pressed" from="UI/HUD/SubHUD/CombatLog/LogButton" to="UI/HUD/SubHUD/CombatLog" method="_on_LogButton_pressed"]
[connection signal="tileMapID" from="Dungeon" to="Debug" method="_on_TileMap_tileMapID"]
[connection signal="tilemapDebug" from="Dungeon" to="Debug" method="_on_TileMap_tilemapDebug"]
[connection signal="passPlayerInfo" from="Player" to="UI" method="_on_Player_passPlayerInfo"]
[connection signal="playerMove" from="Player" to="Debug" method="_on_Player_playerMove"]
[connection signal="playerMove" from="Player" to="." method="_on_Player_playerMove"]
